# PlaneManager

./: .gitignore  .qmlls.ini  CMakeLists.txt  PlaneManager.rc
include/: Airport.h  AirportManager.h  DatabaseManager.h  Flight.h  FlightManager.h  OsmNetworkAccessManager.h  Plane.h  PlaneManager.h
qml/: AirportList.qml  FlightList.qml  MapView.qml  PlaneDetail.qml  PlaneEditDialog.qml  PlaneList.qml  Statistics.qml  main.qml
src/: Airport.cpp  AirportManager.cpp  DatabaseManager.cpp  Flight.cpp  FlightManager.cpp  OsmNetworkAccessManager.cpp  Plane.cpp  PlaneManager.cpp  main.cpp
zpwjcpp__lab__szablon_raportu/: silnia.cpp  zpwjcpp__lab__szablon_raportu.aux  zpwjcpp__lab__szablon_raportu.fdb_latexmk  zpwjcpp__lab__szablon_raportu.fls  zpwjcpp__lab__szablon_raportu.out  zpwjcpp__lab__szablon_raportu.tex  zpwjcpp__lab__szablon_raportu.toc
